[package]
name = "runner"
description = "Driver of the key-value store with automated workloads"
version = "0.1.0"
edition = "2021"
authors = ["Guanzhou Hu <me@josehu.com>"]

[dependencies]
rand = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
color-print = "0.3"
bit-vec = "0.8"
strum = { version = "0.26", features = ["derive"] }
